# telescope

./: .gitignore
controller/main/: CMakeLists.txt  cmd_goto.c  cmd_ping.c  cmd_start.c  cmd_stop.c  cmd_track.c  command_handlers.h  command_helpers.c  command_helpers.h  controller.c  controller_config.h  protocol.h  setup_motor.c  setup_motor.h  state.h
electronics/: notes.md
frontend/: package-lock.json
frontend/src/: App.tsx  useTelescope.ts
server/: Cargo.toml
server/src/: app_state.rs  db.rs  main.rs
server/src/device/: mod.rs  protocol.rs  serial.rs
server/src/websocket/: app_state_dto.rs  mod.rs  ws_message.rs  ws_server.rs
