[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio-serial = "5.4.5"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15.0"
